hphp/hack/test/typecheck/capitalization3.php.exp
File "capitalization3.php", line 7, characters 7-15:
Name already bound: `CAMELCASE` (Naming[2012])
File "capitalization3.php", line 3, characters 7-15:
Previous definition is here
