hphp/hack/test/typecheck/capitalization3.php
<?hh

class CamelCase {
  final public function foo(int $x): void {}
}

class CAMELCASE {
  final public function bar(int $y): void {}
}
